# privacy-preserving-model-auditing-demo

./: Procfile  Procfile-proxy  README.md  binary-buildpack-vars.yml  cf-push.sh  manifest-proxy.yml  manifest-rpc.yml  manifest.yml  push-demographic-example.sh  push-proxy-server.sh  push-rpc-server.sh  run-demographic-client.sh  rust-buildpack-vars.yml
crypto/: Cargo.toml
crypto/src/: paillier.rs  spoint.rs
etc/example/: demographic_info_Alaska_Native.csv  demographic_info_Asian.csv  demographic_info_White.csv  model_results.csv
pjc-proxy-go/: buf.gen.yaml  buf.yaml  go.sum  main.go
pjc-proxy-go/proto/pjc-proxy/: pjc.proto
protocol/: Cargo.toml
protocol-rpc/: Cargo.toml  build.rs
protocol-rpc/proto/: pjc.proto
protocol-rpc/src/connect/: create_client.rs
protocol-rpc/src/proto/: mod.rs  streaming.rs
protocol-rpc/src/rpc/pjc/: client.rs  rpc_client.rs  rpc_server.rs
protocol/src/: lib.rs
protocol/src/pjc/: company.rs  traits.rs
